2012-10-24  Miloslav Trmač  <mitr@redhat.com>

	* lib/kmip.c (kmip_libvk_packet_wrap_secret_symmetric): Fix a memory
	leak.

2012-09-22  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.3.9.
	* NEWS: Update.
	* po/LINGUAS: Update.
	* po/*: Update.

	* README: Fix a typo.

2012-03-03  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.3.8.
	* NEWS: Update.
	* po/*: Update.

2012-02-29  Miloslav Trmač  <mitr@redhat.com>

	* src/volume_key.c (yes_or_no): Fix translator comment marker.
	* po/volume_key.pot: Regenerate.

2011-08-24  Miloslav Trmač  <mitr@redhat.com>

	* COPYING: Update (new FSF address, s/Library GPL/Lesser GPL/).

	* configure.ac: Release 0.3.7.
	* NEWS: Update.
	* po/LINGUAS: Update.
	* po/*: Update.
	* Makefile.am (lib_libvolume_key_la_LDFLAGS): Update version info.

	* po/volume_key.pot: Update.

	* lib/kmip.c (get_enum, kmip_decode_key_block)
	(kmip_decode_object_symmetric_key)
	(kmip_decode_object_secret_data, kmip_decode_protocol_version)
	(kmip_decode_libvk_packet)
	(kmip_libvk_packet_wrap_secret_asymmetric)
	(kmip_libvk_packet_unwrap_secret_asymmetric)
	(kmip_libvk_packet_wrap_secret_symmetric)
	(kmip_libvk_packet_unwrap_secret_symmetric)
	* lib/volume.c (volume_load_escrow_packet)
	* lib/volume_luks.c (luks_parse_escrow_packet): Don't use
	G_G*INT*_FORMAT inside xgettext-handled format strings.

2011-06-10  Miloslav Trmač  <mitr@redhat.com>

	* doc/volume_key.8: Fix a typo reported by Jacquelynn East
	<jeast@redhat.com>.

2011-03-31  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.3.6.
	* NEWS: Update.
	* po/*: Update.
	* po/LINGUAS: Update.

2011-03-04  Miloslav Trmač  <mitr@redhat.com>

	* .tx/config: New file.

	* po/volume_key.pot: Add for Transifex.

2011-02-04  Miloslav Trmač  <mitr@redhat.com>

	* python/volume_key.i (libvk_ui): Silence a compiler warning.

2010-11-24  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.3.5.
	* NEWS: Update.